# test-app

./: .claudeignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  config.py  create_app_zip.bat  index.html  jira_client.py  main.py  metrics.py  project_setup.bat  pyproject.toml  python_setup.bat  remove_reports.py  report_html.py  report_md.py  requirements-dev.txt  requirements.txt  server.py  start_app.bat
.claude/: IMPROVEMENTS.md  mcp-servers-template.json  settings.local.json
.claude/commands/: commit.md  coverage.md  extend.md  (+8 more)
.github/: copilot-instructions.md  dependabot.yml
100/: index.html
101/: index.html
102/: index.html
103/: index.html
104/: index.html
105/: index.html
106/: index.html
107/: index.html
109/: index.html
110/: index.html
111/: index.html
112/: index.html
113/: index.html
115/: index.html
116/: index.html
117/: index.html
118/: index.html
119/: index.html
120/: index.html
121/: index.html
122/: index.html
123/: index.html
124/: index.html
125/: index.html
126/: index.html
127/: index.html
128/: index.html
129/: index.html
130/: index.html
164/: index.html
app/: cert_utils.py  cli.py  config.py  jira_client.py  metrics.py  report_html.py  report_md.py  server.py
config/: defaults.env  jira_filters.json  jira_schema.json
docs/: pipeline.md
last-history/: history-trend.json  history.json
plans/: dau-survey-and-metric.md
templates/: report.html.j2
tests/: conftest.py  run_all_checks.bat  run_component_tests.bat  run_e2e_tests.bat  run_integration_tests.bat  run_unit_tests.bat  test_config.py  test_contracts.py  test_coverage.md  test_e2e.py  test_e2e_connection.py  test_e2e_ui.py  test_imports.py  test_integration.py  test_jira_client.py  test_main_helpers.py  test_metrics.py  test_report_html.py  test_report_md.py  test_server.py  test_server_config.py
tools/: _diag_cert_ui.py  _diag_out.txt  fetch_ssl_cert.py  smoke_test_setup.py  take_screenshots.py
ui/: dau_report.json  dau_survey.html  index.html
(+16155 files in other folders)
