[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "unit: pure-function tests with no I/O (deselect with -m 'not unit')",
    "component: tests that exercise filesystem or HTTP but no inter-module orchestration (deselect with -m 'not component')",
    "integration: tests requiring module integration (skip with -m 'not integration')",
    "e2e: end-to-end tests (skip with -m 'not e2e')",
    "windows_only: tests covering Windows-specific OS behaviour (automatically skipped on Linux/macOS via skipif decorator)",
]

[tool.playwright]
browser = "chromium"

[project]
requires-python = ">=3.12"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]  # pycodestyle, pyflakes, isort, pyupgrade

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["app.server._base", "app.server.cert_handlers", "app.server.config_handlers", "app.server.connection_handlers", "app.server.filter_handlers", "app.server.generate_handlers", "app.server.schema_handlers"]
disable_error_code = ["attr-defined"]
